// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots > should match a simple object snapshot 1`] = `{
  "name": "test",
  "value": 42,
  "nested": {
    "a": 1,
    "b": 2
  }
}`;

exports[`Snapshots > should match a string snapshot 1`] = `Hello, World!`;

exports[`Snapshots > should match an array snapshot 1`] = `[
  1,
  2,
  3,
  "four",
  {
    "five": 5
  }
]`;

exports[`Snapshots > should match multiple snapshots in same test 1`] = `first`;

exports[`Snapshots > should match multiple snapshots in same test 2`] = `second`;

exports[`Snapshots > should match multiple snapshots in same test 3`] = `{
  "third": 3
}`;

exports[`Snapshots > should match object with nested arrays 1`] = `{
  "items": [
    1,
    2,
    3
  ],
  "config": {
    "enabled": true
  }
}`;

exports[`Snapshots should match a simple object snapshot 1`] = `
{
  "name": "test",
  "nested": {
    "a": 1,
    "b": 2,
  },
  "value": 42,
}
`;

exports[`Snapshots should match a string snapshot 1`] = `"Hello, World!"`;

exports[`Snapshots should match an array snapshot 1`] = `
[
  1,
  2,
  3,
  "four",
  {
    "five": 5,
  },
]
`;

exports[`Snapshots should match multiple snapshots in same test 1`] = `"first"`;

exports[`Snapshots should match multiple snapshots in same test 2`] = `"second"`;

exports[`Snapshots should match multiple snapshots in same test 3`] = `
{
  "third": 3,
}
`;

exports[`Snapshots should match object with nested arrays 1`] = `
{
  "config": {
    "enabled": true,
  },
  "items": [
    1,
    2,
    3,
  ],
}
`;
